First htmx version

--- a/backend/templates/menu/menu.html
+++ b/backend/templates/menu/menu.html
@@ -6,7 +6,7 @@
                     {% show_menu from_level to_level extra_inactive extra_active "menu/dropdown.html" "" "" child %}
                 </div>
             {% else %}
-                <a class="nav-link{% if child.selected %} active{% endif %}" href="{{ child.get_absolute_url }}"><span>{{ child.get_menu_title }}</span></a>
+                <a class="nav-link{% if child.selected %} active{% endif %}" href="{{ child.get_absolute_url }}" hx-push-url="false" hx-target="#modal" hx-swap="innerHTML" hx-boost="true"><span>{{ child.get_menu_title }}</span></a>
             {% endif %}
         </li>
     {% endfor %}
