--- a/backend/templates/htmx_cms/base.html
+++ b/backend/templates/htmx_cms/base.html
@@ -21,20 +21,29 @@
             <script src="{% static 'jquery/3.6.4/jquery-3.6.4.min.js' %}"></script>
             <link href="{% static 'bootstrap/5.2.3/bootstrap.min.css' %}" rel="stylesheet">
             <script src="{% static 'bootstrap/5.2.3/bootstrap.bundle.min.js' %}"></script>
+            <link href="{% static 'htmx_cms.css' %}?v=1" rel="stylesheet">
             {% block base_css %}{% endblock %}
 {% endspaceless %}{% render_block 'css' %}{% spaceless %}
     {% block page_head %}{% endblock %}
     {% static_placeholder "Head" %}
     </head>
-    <body {% block body_attrs %}{% endblock %} hx-headers='{"X-CSRFToken": "{{ csrf_token }}"}'>
+    <body 
+        hx-headers='{"X-CSRFToken": "{{ csrf_token }}"}'
+        {% block body_attrs %}{% endblock %} 
+        >
 {% endspaceless %}{% cms_toolbar %}{% spaceless %}
 
-    {% block content %}
+    {% static_placeholder "Header" %}
+    <div id="content">
+      {% block content %}
         {% placeholder "Content" %}
-    {% endblock content %}
-
+      {% endblock content %}
+    </div>
     {% static_placeholder "Footer" %}
-    {% include 'htmx/htmx_modal.html' %}
+
+    {% include 'htmx_cms/modal.html' %}
+    {% comment %}<div id="modal" class="modal fade" tabindex="-1"></div>{% endcomment %}
+    <script>const modal = new bootstrap.Modal('#modal', {});</script>
 
     {% block base_js %}{% endblock %}
 {% endspaceless %}{% render_block 'js' %}{% spaceless %}
