--- a/backend/templates/htmx_cms/modal.html
+++ b/backend/templates/htmx_cms/modal.html
@@ -1,13 +1,19 @@
 {% load cms_tags i18n %}
 
-<div id="modal" class="modal fade" tabindex="-1" hx-target="#modal" hx-swap="innerHTML" hx-swap-oob="true">
+
+<div id="modal" class="modal fade" tabindex="-1" hx-target="#modal" hx-swap="innerHTML">
   <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable modal-xl">
     {% block modal-content %}
       <div id="modal-content" class="modal-content">
+          <div id="modal-spinner" class="d-flex justify-content-center position-absolute w-100 h-100 bg-white" style="z-index:100;">
+            <div class="spinner-border m-auto" role="status">
+              <span class="visually-hidden">{% trans 'Lade' %}...</span>
+            </div>
+          </div>
         <div id="modal-header" class="modal-header">
           {% block modal-header %}
             {% block modal-title %}
-              <h5 id="modal-title" class="modal-title">{% page_attribute "page_title" %}</h5>
+              <h5 id="modal-title" class="modal-title"></h5>
             {% endblock modal-title %}
             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
           {% endblock modal-header %}
@@ -15,7 +21,6 @@
         <div id="modal-body" class="modal-body">
           {% block modal-body %}
             {% block content %}
-            <span class="sr-only">{% trans 'Lade' %}...</span>
             {% endblock content %}
           {% endblock modal-body %}
         </div>
@@ -27,10 +32,4 @@
       </div>
     {% endblock modal-content %}
   </div>
-    <script>
-    	{% if request.htmx %}
-    	  var modal = new bootstrap.Modal('#modal', {});
-	      modal.show();
-      	{% endif %}
-    </script>
 </div>
