--- a/htmx_cms/templates/htmx_cms/base.html
+++ b/htmx_cms/templates/htmx_cms/base.html
@@ -21,6 +21,10 @@
             <script src="{% static 'jquery/3.6.4/jquery-3.6.4.min.js' %}"></script>
             <link href="{% static 'bootstrap/5.2.3/bootstrap.min.css' %}" rel="stylesheet">
             <script src="{% static 'bootstrap/5.2.3/bootstrap.bundle.min.js' %}"></script>
+            <link href="{% static 'fonts/fontawesome/6.4.0/css/fontawesome.min.css' %}" rel="stylesheet">
+            <link href="{% static 'fonts/fontawesome/6.4.0/css/brands.min.css' %}" rel="stylesheet">
+            <link href="{% static 'fonts/fontawesome/6.4.0/css/regular.min.css' %}" rel="stylesheet">
+            <link href="{% static 'fonts/fontawesome/6.4.0/css/solid.min.css' %}" rel="stylesheet">
             <link href="{% static 'htmx_cms.css' %}?v=1" rel="stylesheet">
             {% block base_css %}{% endblock %}
 {% endspaceless %}{% render_block 'css' %}{% spaceless %}
