--- a/htmx_cms/templates/htmx_cms/menu/menu.html
+++ b/htmx_cms/templates/htmx_cms/menu/menu.html
@@ -1,13 +1,20 @@
 {% load i18n menu_tags cache %}{% spaceless %}
     {% for child in children %}
         <li class="nav-item text-center {% if child.ancestor %}ancestor{% endif %}{% if child.children %} dropdown{% endif %}">
-            {% if child.children %}<a class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown" href="{{ child.get_absolute_url }}" id="menu-{{ child.id|safe }}">{{ child.get_menu_title }}</a>
+            <a class="nav-link d-inline-block{% if child.selected %} active{% endif %}" href="{{ child.get_absolute_url }}" data-id="{{ child.id }}" {{ hx_attribs }}><span>{{ child.get_menu_title|safe }}</span></a>
+            {% if child.children %}
+              <a class="nav-link d-inline-block dropdown-toggle" role="button" data-bs-toggle="dropdown" href="{{ child.get_absolute_url }}" id="menu-{{ child.id|safe }}"></a>
                 <div class="dropdown-menu" aria-labelledby="menu-{{ child.ancestor.id|safe }}">
                     {% show_menu from_level to_level extra_inactive extra_active "htmx_cms/menu/dropdown.html" "" "" child %}
                 </div>
-            {% else %}
-                <a class="nav-link{% if child.selected %} active{% endif %}" href="{{ child.get_absolute_url }}" onclick="$('.active').removeClass('active');$(this).addClass('active');"{{ hx_attribs }}><span>{{ child.get_menu_title }}</span></a>
             {% endif %}
         </li>
     {% endfor %}
 {% endspaceless %}
+
+<script>
+  $('.nav-link').click(function () {
+    $('.active').removeClass('active');
+    $(this).addClass('active');
+  });
+</script>
