--- a/htmx_cms/templates/htmx_cms/menu/navbar.html
+++ b/htmx_cms/templates/htmx_cms/menu/navbar.html
@@ -1,7 +1,7 @@
 {% load cms_tags static menu_tags %}
 
 <nav class="navbar navbar-expand-lg">
-    <div class="container">
+    <div class="container-full">
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
