Add header static_placeholder to htmx

--- a/htmx_cms/templates/htmx_cms/content.html
+++ b/htmx_cms/templates/htmx_cms/content.html
@@ -6,6 +6,7 @@
     <h5 id="modal-title" class="modal-title" hx-swap-oob="true">
       {% page_attribute "page_title" %}
     </h5>
+    {% static_placeholder "Header" %}
   {% endif %}
   {% placeholder "Content" %}
 {% endblock %}
