Modal fullscreen md down

--- a/htmx_cms/templates/htmx_cms/modal.html
+++ b/htmx_cms/templates/htmx_cms/modal.html
@@ -2,7 +2,7 @@
 
 
 <div id="modal" class="modal fade" tabindex="-1" hx-target="#modal" hx-swap="innerHTML">
-  <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable modal-xl">
+  <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable modal-xl modal-fullscreen-lg-down">
     {% block modal-content %}
       <div id="modal-content" class="modal-content">
           <div id="modal-spinner" class="d-flex justify-content-center position-absolute w-100 h-100 bg-white" style="z-index:100;">
